deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-fe
  namespace: xora
spec:
  replicas: 4

  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1

  selector:
    matchLabels:
      app: app-fe

  template:
    metadata:
      labels:
        app: app-fe
    spec:
      containers:
        - name: app-fe
          image: aksh76120/xora:xora-v92
          imagePullPolicy: Always
          ports:
            - containerPort: 80

          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
