service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-fe-service
spec:
  type: NodePort
  selector:
    app: app-fe
  ports:
    - port: 80
      targetPort: 80
